[package]
name = "kftray-portforward"
version = "0.22.1"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2021"
description = "KFtray library with port forwarding logic"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "MIT"

[package.metadata.cargo-machete]
ignored = [
  "base64",
  "hyper",
  "async-trait",
  "bytes",
  "dashmap",
  "dirs",
  "flate2",
  "httparse",
  "openssl-sys",
  "uuid",
]

[lib]
name = "kftray_portforward"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hostsfile = { workspace = true }
httparse = { workspace = true }
hyper = { workspace = true }
hyper-openssl = { workspace = true }
hyper-util = { workspace = true }
k8s-openapi = { workspace = true }
kftray-commons = { path = "../kftray-commons", version = "0.22.1" }
kftray-helper = { path = "../kftray-helper", version = "0.22.1" }
kftray-http-logs = { path = "../kftray-http-logs", version = "0.22.1" }
kube = { workspace = true, features = ["runtime"] }
kube-runtime = { workspace = true, features = ["unstable-runtime"] }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }
http = { workspace = true }
arc-swap = { workspace = true }
crossbeam = { version = "0.8" }

[dev-dependencies]
http = { workspace = true }
tempfile = { workspace = true }
tower-test = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["http-proxy", "socks5"]
http-proxy = []
socks5 = []