[package]
name = "kftray-server"
version = "0.27.13"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2024"
description = "KFtray Server is a Rust application that relays UDP/TCP traffic to an upstream server"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11"
env_logger = "0.11.8"
futures = "0.3"
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.8"
uuid = { version = "1.19", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.5.0"
