[package]
name = "kftray-shortcuts"
version = "0.27.0"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2024"
description = "Cross-platform global shortcut management for KFTray"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
global-hotkey = "0.7.0"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
mio = { version = "1.0.4", features = ["os-ext"] }

[features]
default = []
