[package]
name = "kftray-tauri"
version = "0.19.0"
description = "A cross-platform system tray app for Kubernetes port-forward management"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
license = "MIT"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
edition = "2021"

[lib]
name = "kftray_tauri"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { workspace = true }
kftray-helper = { path = "../kftray-helper" }

[dependencies]
kftray-portforward = { path = "../kftray-portforward" }
kftray-commons = { path = "../kftray-commons" }
kftray-http-logs = { path = "../kftray-http-logs" }
kftray-helper = { path = "../kftray-helper" }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-positioner = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
fix-path-env = { workspace = true }
open = { workspace = true }
netstat2 = { workspace = true }
sysinfo = { workspace = true }
git2 = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
rstest = { workspace = true }
once_cell = { workspace = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
