[package]
name = "kftray-tauri"
version = "0.22.3"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2021"
description = "A cross-platform system tray app for Kubernetes port-forward management"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[lib]
name = "kftray_tauri"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
fix-path-env = { workspace = true }
git2 = { workspace = true }
k8s-openapi = { workspace = true }
keyring = { workspace = true }
kftray-commons = { path = "../kftray-commons" }
kftray-helper = { path = "../kftray-helper" }
kftray-http-logs = { path = "../kftray-http-logs" }
kftray-network-monitor = { path = "../kftray-network-monitor" }
kftray-portforward = { path = "../kftray-portforward" }
kube = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
netstat2 = { workspace = true }
open = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true }
tauri-plugin-positioner = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
kftray-helper = { path = "../kftray-helper" }
tauri-build = { workspace = true }

[features]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]