[package]
name = "kftray-tauri"
version = "0.27.19"
authors = ["Henrique Cavarsan <hencavarsan@gmail.com>"]
edition = "2024"
description = "A cross-platform system tray app for Kubernetes port-forward management"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "kftray_tauri"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
fix-path-env = { workspace = true }
jiff = "0.2"
k8s-openapi = { workspace = true }
keyring = { workspace = true }
kftray-commons = { workspace = true }
kftray-helper = { workspace = true }
kftray-network-monitor = { workspace = true }
kftray-portforward = { workspace = true }
kftray-shortcuts = { workspace = true }
kube = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
netstat2 = { workspace = true }
open = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-positioner = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
whoami = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
kftray-helper = { workspace = true }
tauri-build = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11.0"
libc = { workspace = true }

[features]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
