[package]
name = "kftui"
version = "0.27.19"
authors = [
  "Henrique Cavarsan <hencavarsan@gmail.com>",
]
edition = "2024"
description = "KFtray TUI is a Rust application that manage multiple kubectl port forward configurations"
homepage = "https://kftray.app"
repository = "https://github.com/hcavarsan/kftray"
license = "GPL-3.0"
build = "build.rs"

[package.metadata.cargo-machete]
ignored = ["built"]

[dependencies]
anyhow.workspace = true
built = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
kftray-commons = { workspace = true }
kftray-network-monitor = { workspace = true }
kftray-portforward = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
ratatui = { workspace = true }
ratatui-explorer = { workspace = true }
self_update = { version = "0.42.0", features = [
  "archive-tar",
  "compression-flate2",
] }
semver = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
throbber-widgets-tui = { workspace = true }
tokio = { workspace = true }
tui-logger = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[build-dependencies]
built = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.1", default-features = false, features = [
  "native-tls",
  "http2",
  "charset",
] }
