[package]
name = "kube-portforward"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Kubernetes port-forward over SPDY/3.1 with kubectl-style WebSocket with raw fallback"
license = "GPL-3.0"
repository = "https://github.com/hcavarsan/kftray"
keywords = ["kubernetes", "portforward", "spdy", "async", "tokio"]
categories = ["network-programming", "asynchronous"]

[dependencies]
arc-swap = { workspace = true }
base64 = { workspace = true }
crossbeam-queue = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
kube-runtime = { workspace = true }
quanta = { workspace = true }
rand = { workspace = true }
spdy-mux = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[features]
default = []

[dev-dependencies]
k8s-openapi = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
