[package]
name = "kftray-utils"
version = "0.0.1"
edition = "2021"

[ dependencies ]
regex = "1"
log = "0.4"
serde_json = "1.0"
image = "0.25.2"
ico = "0.3.0"
thiserror = "1"
env_logger = "0.11.5"


[[bin]]
name = "bump_version"
path = "src/bump_version.rs"

[[bin]]
name = "generate_icons"
path = "src/generate_icons.rs"

[workspace]
