[package]
name = "kftray-utils"
version = "0.0.1"
edition = "2021"

[ dependencies ]
regex = "1"
log = "0.4"
serde_json = "1"
image = "0.25"
ico = "0.4"
thiserror = "2"
env_logger = "0.11"


[[bin]]
name = "bump_version"
path = "src/bump_version.rs"

[[bin]]
name = "generate_icons"
path = "src/generate_icons.rs"

[workspace]
