[package]
name = "kubeforward"
description = "A low-level Kubernetes forwarding library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "macos-private-api", "system-tray"] }
kube = { version = "0.85.0", features = [ "ws" ] }
k8s-openapi = { version = "0.19.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.32.0", features = [ "full" ] }
tokio-stream = { version = "0.1.14", features = ["net"] }
futures = "0.3.28"
anyhow = "1.0.75"
tracing = "0.1.37"
serde_json = "1.0.107"
hyper = { version = "0.14.27", features = [ "client", "http1", "http2", "tcp", "stream" ] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
rand = "0.8.4"
kube-runtime = "0.85.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
